Updates locking bug in hardcore mode. Updates CSS error with text wrapping. Adds input clearing after invalid answers.

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ nav {
   padding: 0.5rem;
   text-align: center;
   white-space: normal;
-  word-wrap: break-word;
+  word-break: break-word;
   overflow-wrap: break-word;
   overflow-y: auto;
   line-height: 1.2;
